[package]
authors = ["Chris Chamberlain <c.chamberlain@iinet.net.au>"]
name = "native-messaging"
keywords = ["chrome", "firefox", "safari", "native", "messaging", "host", "protocol"]
description = "Implementation of the Native Messaging protocol"
version = "0.2.0"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neon64/chrome-native-messaging"

[dependencies]
serde_json = "1.0.61"
serde = { version = "1.0.118", features = ["derive"] }
